# superqode

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  action.yml  index.html  mkdocs.yml  opencode_session.md  pyproject.toml  sitemap.xml  superqode-all.yaml  superqode-template.yaml  test_unified_output.py
.github/workflows/: ci.yml  docs.yml
advanced/: index.html
advanced/acp-agent-server/: index.html
advanced/agent-loop/: index.html
advanced/airplane-mode/: index.html
advanced/architecture/: index.html
advanced/benchmark-runner/: index.html
advanced/channels/: index.html
advanced/connection-profiles/: index.html
advanced/contextual-policy/: index.html
advanced/evaluation-engine/: index.html
advanced/execution-pipeline/: index.html
advanced/guidance-system/: index.html
advanced/harness-optimization/: index.html
advanced/harness-promotion/: index.html
advanced/harness-protocol/: index.html
advanced/harness-system/: index.html
advanced/harnessbench/: index.html
advanced/headless-ci/: index.html
advanced/local-context/: index.html
advanced/local-stack/: index.html
advanced/logging-system/: index.html
advanced/lsp-integration/: index.html
advanced/mcp-oauth/: index.html
advanced/memory/: index.html
advanced/model-catalog/: index.html
advanced/monty-python-repl/: index.html
advanced/multi-agent/: index.html
advanced/multi-repo-search/: index.html
advanced/omnigent-compat/: index.html
advanced/optimization/: index.html
advanced/plugin-authoring/: index.html
advanced/policies/: index.html
advanced/python-runtimes/: index.html
advanced/recursive-agent-harness/: index.html
advanced/release-0.2.30/: index.html
advanced/rlm-code/: index.html
advanced/safety-permissions/: index.html
advanced/self-improving-harness/: index.html
advanced/semantic-search/: index.html
advanced/session-management/: index.html
advanced/session-sharing/: index.html
advanced/skill-optimization/: index.html
advanced/software-factory/: index.html
advanced/superqode-vs-omnigent/: index.html
advanced/tools-catalog/: index.html
advanced/tools-system/: index.html
advanced/tui/: index.html
advanced/vim-mode/: index.html
advanced/workorders/: index.html
advanced/workspace-internals/: index.html
advanced/workspace-system/: index.html
api-reference/: index.html
api-reference/jsonl-events/: index.html
api-reference/python-sdk/: index.html
cli-reference/: index.html
cli-reference/advanced-validation-commands/: index.html
cli-reference/agents-commands/: index.html
cli-reference/auth-commands/: index.html
cli-reference/benchmark-commands/: index.html
cli-reference/config-commands/: index.html
cli-reference/connect-commands/: index.html
cli-reference/daemon-command/: index.html
cli-reference/doctor-command/: index.html
cli-reference/factory-commands/: index.html
cli-reference/harness-commands/: index.html
cli-reference/init-commands/: index.html
cli-reference/local-commands/: index.html
cli-reference/mcp-command/: index.html
cli-reference/memory-commands/: index.html
cli-reference/models-commands/: index.html
cli-reference/plugins-commands/: index.html
cli-reference/policy-commands/: index.html
cli-reference/profiles-commands/: index.html
cli-reference/qe-commands/: index.html
concepts/: index.html
configuration/: index.html
developer-workflows/: index.html
docs/: FRAMEWORK_COMPARISON_REPORT.md  developer-workflows.md  examples.md  harness-engineering.md  index.md  local-agentic-coding.md  local-recursive-dynamic-coding.md  openclaw-attack-plan.md  product-capabilities.md  release-readiness.md  runtimes.md  superclaw-package-design.md
enterprise/: index.html
examples/: README.md  byok-acp-team.yaml  codex_sdk_quickstart.py  index.html  local-models-team.yaml  omnigent-multi-agent.agent.yaml  simple-team.yaml
examples/extensions/python-package/: pyproject.toml
examples/extensions/python-package/src/superqode_example_extension/: __init__.py
examples/harness-packages/hello-harness/: pyproject.toml
examples/harness-packages/hello-harness/src/superqode_hello_harness/: __init__.py
getting-started/: index.html
harness-engineering/: index.html
install/: superqode.rb
integration/: index.html
local-agentic-coding/: index.html
local-recursive-dynamic-coding/: index.html
product/: PRODUCT_GOAL.md  local-first-strategy.md
product-capabilities/: index.html
providers/: index.html
qe-features/: index.html
release-readiness/: index.html
runtimes/: index.html
scripts/: Dockerfile.linux_build  build_binary.sh  build_linux_binary.sh  build_linux_with_docker.sh  check_030_candidate.py  check_extension_packages.py  check_harness_package.py  check_public_docs_style.py  check_release_metadata.py  install.sh  package_release.sh  runtime_hook.py  smoke_local_models.py  smoke_omnigent_agent_sessions.py  test_homebrew_local.sh
search/: search_index.json
stylesheets/: extra.css
tests/: test_030_candidate.py  test_acp_client.py  test_acp_free_models.py  test_acp_parent_tool_linking.py  test_acp_permission_store.py  test_acp_registry.py  test_acp_render.py  test_acp_server.py  test_acp_session_store.py  test_acp_slash.py  test_adaptive_compaction.py  test_agent_importer.py  test_agent_loop_harness.py  test_agent_memory.py  test_agents_md_compat.py  test_agy_tui_commands.py  test_app_main_contract.py  test_apply_patch.py  test_auth.py  test_bash_spill.py  test_benchmarks.py  test_change_summary.py  test_channels.py  test_cli_commands.py  test_cli_connect.py  test_cli_contract.py  test_cli_reference_coverage.py  test_command_safety.py  test_commands_runtime.py  test_compaction.py  test_config_loader.py  test_config_runtime.py  test_connect_setup.py  test_connection_profiles.py  test_context_handles.py  test_context_probe.py  test_context_remaining.py  test_create_skill_tool.py  test_deferred_tools.py  test_developer_workflow_docs.py  (+149 more)
(+760 files in other folders)
