[project]
name = "superqode"
version = "0.1.37"
description = "SuperQode: Your Portable Coding Agent Harness"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.14"
authors = [
    {name = "Shashi Jagtap", email = "info@super-agentic.ai"}
]
maintainers = [
    {name = "Shashi Jagtap", email = "info@super-agentic.ai"}
]
keywords = ["ai", "coding-agents", "multi-agent", "orchestration", "sdlc", "automation", "mcp", "kubernetes", "superqode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "pyyaml>=6.0.3",
    "click>=8.0.0",
    "litellm>=1.83.14",
    "agent-client-protocol>=0.10.0",
    "prompt_toolkit>=3.0.52",
    "rich>=15.0.0",
    "textual>=0.47.0",
    "mcp>=1.27.1",
    "anyio>=4.0.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "python-frontmatter>=1.1.0",
    "codeoptix>=0.1.3",
    "superopt>=0.1.1",
]

[project.optional-dependencies]
hf = [
    # Hugging Face Hub search + download (hf_xet gives chunk-dedup fast transfers).
    "huggingface_hub[hf_xet]>=1.0.0",
]
mlx = [
    # >=0.31 adds the Gemma 4 (gemma4 / Gemma4ForConditionalGeneration) model
    # class needed to load/convert Gemma 4 weights. Older builds raise
    # "Model type gemma4 not supported".
    "mlx-lm>=0.31.0,<0.32.0; python_version < '3.14'",
    # mlx-vlm handles multimodal models that mlx-lm can't (e.g. plain gemma4
    # VLMs). Capped <0.6 because 0.6.x requires starlette>=1.0.1, which clashes
    # with superqode's fastapi/starlette. Newer arches like gemma4_unified that
    # only 0.6.x supports are converted in an isolated env, not the main venv.
    "mlx-vlm>=0.5.0,<0.6.0; python_version < '3.14'",
]
monty = [
    "pydantic-monty>=0.0.4",
]
extras = [
    "exa-py>=1.0.0",
]
a2a = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
adk = [
    "google-adk>=2.1.0,<3.0",
]
openai-agents = [
    "openai-agents>=0.17.4",
    "openai-agents[litellm]>=0.17.4",
]
codex-sdk = [
    "openai-codex>=0.1.0b2,<0.2.0",
]
claude-agent-sdk = [
    # Anthropic Claude Agent SDK (drives the local Claude Code CLI; API-key auth
    # via ANTHROPIC_API_KEY). Adapter maps SDK message/block + permission shapes.
    "claude-agent-sdk>=0.2.9,<0.3.0",
]
deepagents = [
    "deepagents>=0.6.0,<0.7.0",
]
pydanticai = [
    "pydantic-ai>=1.98.0,<2.0.0",
]
pydanticai-logfire = [
    "pydantic-ai>=1.98.0,<2.0.0",
    "logfire>=4.0.0",
]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
    "coverage>=7.0.0",
    "ruff>=0.9.6",
    "mypy>=1.17.0",
    "pre-commit>=4.1.0",
]
testing = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
    "coverage>=7.0.0",
    "bandit>=1.8.0",
    "httpx>=0.28.1",
]
linters = [
    "bandit>=1.8.0",
    "pylint>=3.3.0",
    "flake8>=7.1.0",
    "safety>=3.0.0",
    "pip-audit>=2.10.0",
]
ui-testing = [
    "selenium>=4.27.0",
    "playwright>=1.49.0",
]
performance = [
    "locust>=2.33.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.12.0",
    "mkdocs-minify-plugin>=0.8.0",
]

[project.urls]
Repository = "https://github.com/SuperagenticAI/superqode"
Documentation = "https://superagenticai.github.io/superqode/"
Issues = "https://github.com/SuperagenticAI/superqode/issues"
Changelog = "https://github.com/SuperagenticAI/superqode/blob/main/CHANGELOG.md"

[project.scripts]
superqode = "superqode.main:cli_main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
superqode = ["agents/data/*.toml", "data/*.yaml", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "site",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-import-not-at-top-of-file
    "F401",   # unused import
    "F541",   # f-string missing placeholders
    "F811",   # redefined while unused
    "F821",   # undefined name
    "F823",   # undefined local
    "F841",   # unused variable
]

[tool.ruff.lint.isort]
known-first-party = ["superqode"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external agents, services, or credentials",
]

[tool.bandit]
exclude_dirs = ["tests", "examples", "docs", "scripts", "reference_code", "site"]
skips = ["B101"]  # Skip assert_used test (tests use assert)
