[project]
name = "superqode"
version = "0.2.36"
description = "Agent Engineering for your code factory"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.14"
authors = [
    {name = "Shashi Jagtap", email = "info@super-agentic.ai"}
]
maintainers = [
    {name = "Shashi Jagtap", email = "info@super-agentic.ai"}
]
keywords = ["ai", "agent-engineering", "code-engineering", "code-factory", "harness-engineering", "coding-agents", "agent-harness", "multi-agent", "orchestration", "evaluation", "optimization", "acp", "mcp", "automation", "superqode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "pyyaml>=6.0.3",
    "click>=8.0.0",
    "litellm>=1.83.14",
    # Actively evolving protocol library: 0.11 removed session/set_model and its
    # schema types. Code supports 0.10 and 0.11; cap to avoid surprise breakage
    # in released artifacts.
    "agent-client-protocol>=0.10.0,<0.12",
    "prompt_toolkit>=3.0.52",
    "rich>=15.0.0",
    "textual>=0.47.0",
    "mcp>=1.27.1",
    "anyio>=4.0.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "python-frontmatter>=1.1.0",
    "superopt>=0.1.1",
]

[project.optional-dependencies]
hf = [
    # Hugging Face Hub search + download (hf_xet gives chunk-dedup fast transfers).
    "huggingface_hub[hf_xet]>=1.0.0",
]
mlx = [
    # >=0.31 adds the Gemma 4 (gemma4 / Gemma4ForConditionalGeneration) model
    # class needed to load/convert Gemma 4 weights. Older builds raise
    # "Model type gemma4 not supported".
    "mlx-lm>=0.31.0,<0.32.0; python_version < '3.14'",
    # mlx-vlm handles multimodal models that mlx-lm can't (e.g. plain gemma4
    # VLMs). Capped <0.6 because 0.6.x requires starlette>=1.0.1, which clashes
    # with superqode's fastapi/starlette. Newer arches like gemma4_unified that
    # only 0.6.x supports are converted in an isolated env, not the main venv.
    "mlx-vlm>=0.5.0,<0.6.0; python_version < '3.14'",
]
monty = [
    "pydantic-monty>=0.0.4",
]
semantic = [
    # AST-based semantic code search client. The default integration stays slim:
    # use LiteLLM/Ollama embeddings locally, or install cocoindex-code[full]
    # separately if you want sentence-transformers in the same environment.
    "cocoindex-code>=0.2.35,<0.3",
]
channels = [
    # Slack Socket Mode and the Discord Gateway are websocket transports;
    # Telegram long polling is stdlib-only and needs no extra.
    "websocket-client>=1.6.0",
]
sandbox-e2b = [
    "e2b>=2.0.0",
]
sandbox-modal = [
    "modal>=1.0.0",
]
sandbox-daytona = [
    "daytona>=0.1.0",
]
sandbox-cloud = [
    "e2b>=2.0.0",
    "modal>=1.0.0",
    "daytona>=0.1.0",
]
web = [
    "textual-serve>=1.1.3",
]
extras = [
    "exa-py>=1.0.0",
]
a2a = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
adk = [
    "google-adk>=2.1.0,<3.0",
]
openai-agents = [
    "openai-agents>=0.17.4",
    "openai-agents[litellm]>=0.17.4",
]
codex-sdk = [
    "openai-codex>=0.1.0b2,<0.2.0",
]
copilot-sdk = [
    # Official GitHub Copilot SDK. The Python wheel manages a pinned Copilot
    # runtime and uses the user's Copilot login or an explicit GitHub token.
    "github-copilot-sdk>=1.0.8,<2.0.0",
]
claude-agent-sdk = [
    # Anthropic Claude Agent SDK (drives the local Claude Code CLI; API-key auth
    # via ANTHROPIC_API_KEY). Adapter maps SDK message/block + permission shapes.
    "claude-agent-sdk>=0.2.9,<0.3.0",
]
antigravity-sdk = [
    "google-antigravity>=0.1.8,<0.2.0",
    # The SDK ships edition-2024 generated descriptors but its own protobuf
    # lower bound is too loose; its 7.35 gencode requires protobuf 7.35+.
    "protobuf>=7.35.0",
]
# Convenience bundle for users who actively use all supported vendor SDK
# runtimes. Vendor CLIs such as Grok and agy remain separate installations.
vendor-sdks = [
    "openai-codex>=0.1.0b2,<0.2.0",
    "github-copilot-sdk>=1.0.8,<2.0.0",
    "claude-agent-sdk>=0.2.9,<0.3.0",
    "google-antigravity>=0.1.8,<0.2.0",
    "protobuf>=7.35.0",
]
deepagents = [
    "deepagents>=0.6.0,<0.7.0",
]
pydanticai = [
    "pydantic-ai>=1.98.0,<2.0.0",
]
pydanticai-logfire = [
    "pydantic-ai>=1.98.0,<2.0.0",
    "logfire>=4.0.0",
]
rlm-code = [
    "rlm-code[llm-all]>=0.1.11,<0.2.0",
]
mem0 = [
    "mem0ai>=2.0.4,<3.0.0",
]
supermemory = [
    "supermemory>=3.45.0,<4.0.0",
]
memory-providers = [
    "mem0ai>=2.0.4,<3.0.0",
    "supermemory>=3.45.0,<4.0.0",
]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
    "coverage>=7.0.0",
    "ruff>=0.9.6",
    "mypy>=1.17.0",
    "pre-commit>=4.1.0",
]
testing = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
    "coverage>=7.0.0",
    "bandit>=1.8.0",
    "httpx>=0.28.1",
]
linters = [
    "bandit>=1.8.0",
    "pylint>=3.3.0",
    "flake8>=7.1.0",
    "safety>=3.0.0",
    "pip-audit>=2.10.0",
]
ui-testing = [
    "selenium>=4.27.0",
    "playwright>=1.49.0",
]
performance = [
    "locust>=2.33.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.12.0",
    "mkdocs-minify-plugin>=0.8.0",
]
optimization = [
    "gepa>=0.1.1",
]
observability = [
    "arize-phoenix>=17.7.0",
    "arize-phoenix-otel>=0.16.1",
    "langsmith>=0.8.5",
    "logfire>=4.33.0",
    "mlflow>=3.14.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
]

[project.urls]
Repository = "https://github.com/SuperagenticAI/superqode"
Documentation = "https://superagenticai.github.io/superqode/"
Issues = "https://github.com/SuperagenticAI/superqode/issues"
Changelog = "https://github.com/SuperagenticAI/superqode/blob/main/CHANGELOG.md"

[project.scripts]
superqode = "superqode.main:cli_main"
sq = "superqode.main:cli_main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
superqode = [
    "agents/data/*.toml",
    "data/*.yaml",
    "data/eval_fixtures/*.log",
    "data/eval_packs/*.yaml",
    "local/data/*.yaml",
    "local/data/model-packs/*.yaml",
    "py.typed",
]

[tool.uv]
# google-antigravity 0.1.8 ships protobuf 7.35-generated descriptors, while
# mem0ai currently requires protobuf <7. Keep uv from selecting a combination
# that installs successfully but cannot import the Antigravity SDK.
conflicts = [
    [
        { extra = "antigravity-sdk" },
        { extra = "mem0" },
    ],
    [
        { extra = "antigravity-sdk" },
        { extra = "memory-providers" },
    ],
    [
        { extra = "vendor-sdks" },
        { extra = "mem0" },
    ],
    [
        { extra = "vendor-sdks" },
        { extra = "memory-providers" },
    ],
    [
        { extra = "antigravity-sdk" },
        { extra = "adk" },
    ],
    [
        { extra = "antigravity-sdk" },
        { extra = "observability" },
    ],
    [
        { extra = "vendor-sdks" },
        { extra = "adk" },
    ],
    [
        { extra = "vendor-sdks" },
        { extra = "observability" },
    ],
    [
        { extra = "antigravity-sdk" },
        { extra = "sandbox-modal" },
    ],
    [
        { extra = "antigravity-sdk" },
        { extra = "sandbox-cloud" },
    ],
    [
        { extra = "vendor-sdks" },
        { extra = "sandbox-modal" },
    ],
    [
        { extra = "vendor-sdks" },
        { extra = "sandbox-cloud" },
    ],
    [
        { extra = "antigravity-sdk" },
        { extra = "pydanticai" },
    ],
    [
        { extra = "antigravity-sdk" },
        { extra = "pydanticai-logfire" },
    ],
    [
        { extra = "vendor-sdks" },
        { extra = "pydanticai" },
    ],
    [
        { extra = "vendor-sdks" },
        { extra = "pydanticai-logfire" },
    ],
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "site",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-import-not-at-top-of-file
    "F401",   # unused import
    "F541",   # f-string missing placeholders
    "F811",   # redefined while unused
    "F821",   # undefined name
    "F823",   # undefined local
    "F841",   # unused variable
]

[tool.ruff.lint.isort]
known-first-party = ["superqode"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external agents, services, or credentials",
]

[tool.bandit]
exclude_dirs = ["tests", "examples", "docs", "scripts", "reference_code", "site"]
skips = ["B101"]  # Skip assert_used test (tests use assert)
